--- a/client/views/dashboard.html
+++ b/client/views/dashboard.html
@@ -1,6 +1,10 @@
 <template name="dashboard">
 
-  <ul class="dashboard fade">
+  <div class="profile">
+        <img class="profile-image" src="http://placehold.it/150x150" />
+  </div>
+
+  <ul class="dashboard flip">
     <div class="dashboard-week">
       <li class="dashboard-day sun" href="#">
         <img class="dashboard-image" src="http://placehold.it/150x150" />
@@ -8,7 +12,7 @@
           <span class="dashboard-date-month">Jan</span>
           <span class="dashboard-date-day">1</span>
         </div>
-        <div class="dashboard-blurb"><span>Sunday</span> The best thing that happened to me was...</div>
+        <a class="dashboard-blurb" href="#">Loading&hellip;</a>
       </li>
       <li class="dashboard-day mon" href="#">
         <img class="dashboard-image" src="http://placehold.it/150x150" />
@@ -16,7 +20,7 @@
           <span class="dashboard-date-month">Jan</span>
           <span class="dashboard-date-day">1</span>
         </div>
-        <div class="dashboard-blurb"><span>Monday</span>The best thing that happened to me was...</div>
+        <a class="dashboard-blurb" href="#">Loading&hellip;</a>
       </li>
       <li class="dashboard-day tue" href="#">
         <img class="dashboard-image" src="http://placehold.it/150x150" />
@@ -24,15 +28,15 @@
           <span class="dashboard-date-month">Jan</span>
           <span class="dashboard-date-day">1</span>
         </div>
-        <div class="dashboard-blurb"><span>Tuesday</span>The best thing that happened to me was...</div>
+        <a class="dashboard-blurb" href="#">Loading&hellip;</a>
       </li>
-      <li class="dashboard-day wed active" href="/hello/2013/7/10" data-date="Wed Jul 10 2013 00:00:00 GMT-0400 (EDT)">
+      <li class="dashboard-day wed active" data-date="Wed Jul 10 2013 00:00:00 GMT-0400 (EDT)">
         <img class="dashboard-image" src="http://placehold.it/150x150" />
         <div class="dashboard-date">
           <span class="dashboard-date-month">Jan</span>
           <span class="dashboard-date-day">1</span>
         </div>
-        <div class="dashboard-blurb"><span>Wednesday</span>The best thing that happened to me was...</div>
+        <a class="dashboard-blurb" href="#">Loading&hellip;</a>
       </li>
       <li class="dashboard-day thu" href="#">
         <img class="dashboard-image" src="http://placehold.it/150x150" />
@@ -40,7 +44,7 @@
           <span class="dashboard-date-month">Jan</span>
           <span class="dashboard-date-day">1</span>
         </div>
-        <div class="dashboard-blurb"><span>Thursday</span>The best thing that happened to me was...</div>
+        <a class="dashboard-blurb" href="#">Loading&hellip;</a>
       </li>
       <li class="dashboard-day fri" href="#">
         <img class="dashboard-image" src="http://placehold.it/150x150" />
@@ -48,7 +52,7 @@
           <span class="dashboard-date-month">Jan</span>
           <span class="dashboard-date-day">1</span>
         </div>
-        <div class="dashboard-blurb"><span>Friday</span>The best thing that happened to me was...</div>
+        <a class="dashboard-blurb" href="#">Loading&hellip;</a>
       </li>
       <li class="dashboard-day sat" href="#">
         <img class="dashboard-image" src="http://placehold.it/150x150" />
@@ -56,7 +60,7 @@
           <span class="dashboard-date-month">Jan</span>
           <span class="dashboard-date-day">1</span>
         </div>
-        <div class="dashboard-blurb"><span>Saturday</span>The best thing that happened to me was...</div>
+        <a class="dashboard-blurb" href="#">Loading&hellip;</a>
       </li>
     </div>
   </div>
