--- a/client/style/_dashboard.scss
+++ b/client/style/_dashboard.scss
@@ -1,31 +1,93 @@
-.dashboard {
+.profile {
+  @include box-sizing;
   position:relative;
+  z-index:1;
+  width:300px;
+  background:#666666;
+  padding:40px;
+  min-height:100%;
+  text-align:center;
+}
+.profile-image {
+  border-radius:75px;
+}
+.dashboard {
+  @include box-sizing;
+  position: absolute;
+  top:0;
+  left:0;
+  overflow-x: hidden;
+  overflow-y: scroll;
   margin:0;
-  padding:0;
-  background:#efefef;
+  padding:0 0 0 300px;;
+  width: 100%;
   height:100%;
-  overflow-y:scroll;
-  overflow-x:hidden;
+  background:#dddddd;
+  list-style: none;
+
+  -webkit-perspective: 400px;
+     -moz-perspective: 400px;
+      -ms-perspective: 400px;
+       -o-perspective: 400px;
+          perspective: 400px;
 }
 
 .dashboard-day {
-  text-decoration:none;
   display:block;
   position:relative;
   @include box-sizing;
   clear:both;
-  padding:10px;
+  padding:0;
   height:83px;
   border-top:2px solid #dedede;
   border-bottom:2px solid #dedede;
-  cursor:pointer;
+  background:#efefef;
   &.active {
     background:#f9f9f9;
   }
+  &.empty {
+    background:#e6e6e6;
+    .dashboard-blurb {color:#bebebe;}
+  }
   &:hover {
-    background:white;
+    background:#ffffff;
     .dashboard-date {
       @include box-shadow(0 3px 0 $orange);
+    }
+  }
+  &.disabled {
+    background:#e6e6e6;
+    .dashboard-blurb { opacity:.25; cursor:default; }
+    .dashboard-date { opacity:.5; @include box-shadow(0 3px 0 rgba(0,0,0,0.1));}
+  }
+  &.first-of-month{
+    &::before{
+      position:absolute;
+      top:-10px;
+      display:block;
+      padding-left:20px;
+      width:100%;
+      height:20px;
+      background:#cdcdcd;
+      color:#ffffff;
+      content:attr(data-month);
+      text-transform:uppercase;
+      letter-spacing:1px;
+      font-weight:900;
+      font-size:10px;
+      line-height:20px;
+    }
+  }
+  &.img {
+    &::after{
+      content:"";
+      width:12px;
+      height:12px;
+      position:absolute;
+      top:34px;
+      right:14px;
+      background:$orange;
+      border-radius:6px;
     }
   }
 
@@ -37,13 +99,14 @@
   }
   .dashboard-date{
     position:relative;
+    pointer-events:none;
     float:left;
-    margin:10px;
+    margin:20px;
     width:40px;
     height:40px;
     background:#ffffff;
     text-align:center;
-    @include box-shadow(0 3px 0 rgba(0,0,0,0.1))
+    @include box-shadow(0 3px 0 rgba(0,0,0,0.1));
   }
     .dashboard-date-month {
       display:block;
@@ -62,11 +125,15 @@
       font-size:24px;
     }
   .dashboard-blurb {
+    display:block;
+    overflow:hidden;
     color:#666666;
+    text-decoration:none;
     white-space: nowrap;
     font-weight:400;
     font-family: "ratio";
-    line-height:60px;
+    line-height:80px;
+    -webkit-mask-image: -webkit-linear-gradient(left, rgba(0,0,0,1),  rgba(0,0,0,1) 82%, rgba(0,0,0,0) 95%);
     span {
       display:inline-block;
       margin-right:10px;
