--- a/client/views/dashboard.html
+++ b/client/views/dashboard.html
@@ -3,41 +3,9 @@
   <div class="profile">
         <img class="profile-image" src="http://placehold.it/150x150" />
   </div>
-
+{{#constant}}
   <ul class="dashboard flip">
     <div class="dashboard-week">
-      <li class="dashboard-day sun" href="#">
-        <img class="dashboard-image" src="http://placehold.it/150x150" />
-        <div class="dashboard-date">
-          <span class="dashboard-date-month">Jan</span>
-          <span class="dashboard-date-day">1</span>
-        </div>
-        <a class="dashboard-blurb" href="#">Loading&hellip;</a>
-      </li>
-      <li class="dashboard-day mon" href="#">
-        <img class="dashboard-image" src="http://placehold.it/150x150" />
-        <div class="dashboard-date">
-          <span class="dashboard-date-month">Jan</span>
-          <span class="dashboard-date-day">1</span>
-        </div>
-        <a class="dashboard-blurb" href="#">Loading&hellip;</a>
-      </li>
-      <li class="dashboard-day tue" href="#">
-        <img class="dashboard-image" src="http://placehold.it/150x150" />
-        <div class="dashboard-date">
-          <span class="dashboard-date-month">Jan</span>
-          <span class="dashboard-date-day">1</span>
-        </div>
-        <a class="dashboard-blurb" href="#">Loading&hellip;</a>
-      </li>
-      <li class="dashboard-day wed active" data-date="Wed Jul 10 2013 00:00:00 GMT-0400 (EDT)">
-        <img class="dashboard-image" src="http://placehold.it/150x150" />
-        <div class="dashboard-date">
-          <span class="dashboard-date-month">Jan</span>
-          <span class="dashboard-date-day">1</span>
-        </div>
-        <a class="dashboard-blurb" href="#">Loading&hellip;</a>
-      </li>
       <li class="dashboard-day thu" href="#">
         <img class="dashboard-image" src="http://placehold.it/150x150" />
         <div class="dashboard-date">
@@ -62,7 +30,40 @@
         </div>
         <a class="dashboard-blurb" href="#">Loading&hellip;</a>
       </li>
+      <li class="dashboard-day sun" href="#">
+        <img class="dashboard-image" src="http://placehold.it/150x150" />
+        <div class="dashboard-date">
+          <span class="dashboard-date-month">Jan</span>
+          <span class="dashboard-date-day">1</span>
+        </div>
+        <a class="dashboard-blurb" href="#">Loading&hellip;</a>
+      </li>
+      <li class="dashboard-day mon" href="#">
+        <img class="dashboard-image" src="http://placehold.it/150x150" />
+        <div class="dashboard-date">
+          <span class="dashboard-date-month">Jan</span>
+          <span class="dashboard-date-day">1</span>
+        </div>
+        <a class="dashboard-blurb" href="#">Loading&hellip;</a>
+      </li>
+      <li class="dashboard-day tue" href="#">
+        <img class="dashboard-image" src="http://placehold.it/150x150" />
+        <div class="dashboard-date">
+          <span class="dashboard-date-month">Jan</span>
+          <span class="dashboard-date-day">1</span>
+        </div>
+        <a class="dashboard-blurb" href="#">Loading&hellip;</a>
+      </li>
+      <li class="dashboard-day wed active" data-date="{{date}}">
+        <img class="dashboard-image" src="http://placehold.it/150x150" />
+        <div class="dashboard-date">
+          <span class="dashboard-date-month">Jan</span>
+          <span class="dashboard-date-day">1</span>
+        </div>
+        <a class="dashboard-blurb" href="#">Loading&hellip;</a>
+      </li>
     </div>
-  </div>
+  </ul>
+{{/constant}}
 
 </template>
