--- a/client/views/dashboard.html
+++ b/client/views/dashboard.html
@@ -2,10 +2,52 @@
 
   <div class="profile">
         <img class="profile-image" src="http://placehold.it/150x150" />
+        <h3 class="name">Michael W.</h3>
+        <p class="subtitle">Member since May 2013. A headline about Michael goes here. He is probably pretty cool.</p>
+        <div class="profile-stat">
+          <p class="profile-stat-num">82</p>
+          <p class="profile-stat-cap">total <br />besterdays</p>
+        </div>
+        <div class="profile-stat">
+          <p class="profile-stat-num">80%</p>
+          <p class="profile-stat-cap">days <br />completed</p>
+        </div>
+        <div class="profile-stat">
+          <p class="profile-stat-num">28</p>
+          <p class="profile-stat-cap">best <br />streak</p>
+        </div>
+        <div class="profile-stat">
+          <p class="profile-stat-num">14</p>
+          <p class="profile-stat-cap">current <br />streak</p>
+        </div>
+
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+
+        <div class="profile-buttons">
+          <a href="#" class="profile-edit">Edit profile</a>
+          <a href="#" class="profile-signout">Sign out</a>
+        </div>
   </div>
 {{#constant}}
+  <div class="dashboard-title">July 2013</div>
   <ul class="dashboard flip">
     <div class="dashboard-week">
+      <li class="dashboard-day wed active" data-date="{{date}}">
+        <img class="dashboard-image" src="http://placehold.it/150x150" />
+        <div class="dashboard-date">
+          <span class="dashboard-date-month">Jan</span>
+          <span class="dashboard-date-day">1</span>
+        </div>
+        <a class="dashboard-blurb" href="#">Loading&hellip;</a>
+      </li>
       <li class="dashboard-day thu" href="#">
         <img class="dashboard-image" src="http://placehold.it/150x150" />
         <div class="dashboard-date">
@@ -47,14 +89,6 @@
         <a class="dashboard-blurb" href="#">Loading&hellip;</a>
       </li>
       <li class="dashboard-day tue" href="#">
-        <img class="dashboard-image" src="http://placehold.it/150x150" />
-        <div class="dashboard-date">
-          <span class="dashboard-date-month">Jan</span>
-          <span class="dashboard-date-day">1</span>
-        </div>
-        <a class="dashboard-blurb" href="#">Loading&hellip;</a>
-      </li>
-      <li class="dashboard-day wed active" data-date="{{date}}">
         <img class="dashboard-image" src="http://placehold.it/150x150" />
         <div class="dashboard-date">
           <span class="dashboard-date-month">Jan</span>
