--- a/client/style/_dashboard.scss
+++ b/client/style/_dashboard.scss
@@ -4,12 +4,93 @@
   z-index:1;
   width:300px;
   background:#666666;
-  padding:40px;
   min-height:100%;
-  text-align:center;
+  float:left;
+  font-family:"ratio";
+  color:#dedede;
+  height:100%;
+  overflow-y:scroll;
+  h3.name {
+    display:block;
+    text-align:center;
+    margin:10px auto;
+    padding:5px 40px;
+    color:#ffffff;
+  }
+  p.subtitle {
+    margin:0 40px 20px;
+    font-weight:200;
+  }
 }
 .profile-image {
+  display:block;
   border-radius:75px;
+  margin:40px auto 15px auto;
+}
+.profile-stat {
+  display:block;
+  &:nth-child(even) {margin:10px 10px 10px 40px;}
+  &:nth-child(odd) {margin:10px 40px 10px 10px;}
+  // margin:10px 40px;
+  // border-top:dotted #dedede 1px;
+  padding:0px 0 15px 0;
+  width:90px;
+  float:left;
+  border-bottom:solid 5px #787878;
+  @include box-sizing;
+  .profile-stat-num {
+    font-weight:100;
+    font-size:48px;
+    margin:0;
+  }
+  .profile-stat-cap {
+    margin:0;
+    font-weight:400;
+    font-size:11px;
+    text-transform:uppercase;
+    color:#b0b0b0;
+  }
+}
+
+.profile-buttons {
+  position:absolute;
+  bottom:0;
+  left:0;
+  right:0;
+  a {
+    @include box-sizing;
+    position:relative;
+    display:block;
+    margin:5px;
+    text-decoration:none;
+    padding:10px 20px;
+    color:#909090;
+    background:#565656;
+    &:hover {
+      color:#d6d6d6;
+      background:#808088;
+    }
+  }
+}
+
+
+.dashboard-title {
+  position:relative;
+  overflow:hidden;
+  // top:0;
+  // left:0;
+  z-index:2;
+  margin-left:300px;
+  padding:5px 20px 5px 20px;
+  // width:100%;
+  height:20px;
+  background:#cdcdcd;
+  color:#ffffff;
+  line-height:20px;
+  text-transform:uppercase;
+  letter-spacing:1px;
+  font-weight:900;
+  font-size:10px;
 }
 .dashboard {
   @include box-sizing;
@@ -19,7 +100,7 @@
   overflow-x: hidden;
   overflow-y: scroll;
   margin:0;
-  padding:0 0 0 300px;;
+  padding:30px 0 0 300px;
   width: 100%;
   height:100%;
   background:#dddddd;
@@ -33,9 +114,9 @@
 }
 
 .dashboard-day {
-  display:block;
-  position:relative;
   @include box-sizing;
+  position:relative;
+  display:block;
   clear:both;
   padding:0;
   height:83px;
@@ -60,9 +141,10 @@
     .dashboard-blurb { opacity:.25; cursor:default; }
     .dashboard-date { opacity:.5; @include box-shadow(0 3px 0 rgba(0,0,0,0.1));}
   }
-  &.first-of-month{
+  &.first-of-month + li {
     &::before{
       position:absolute;
+      z-index:9;
       top:-10px;
       display:block;
       padding-left:20px;
@@ -126,7 +208,7 @@
     }
   .dashboard-blurb {
     display:block;
-    overflow:hidden;
+    overflow-x:hidden;
     color:#666666;
     text-decoration:none;
     white-space: nowrap;
