I forget what I did

--- a/client/style/_helpers.scss
+++ b/client/style/_helpers.scss
@@ -6,6 +6,7 @@ $bg: #FCF9F5;
 $orange: #ffae41;
 $hover: #f1f1f1;
 $text: #666666;
+$sepia: #ff905a;
 
 
 /* ==========================================================================
