--- a/client/style/_dashboard.scss
+++ b/client/style/_dashboard.scss
@@ -9,7 +9,7 @@
   font-family:"ratio";
   color:#dedede;
   height:100%;
-  overflow-y:scroll;
+  // overflow-y:scroll;
   h3.name {
     display:block;
     text-align:center;
@@ -83,14 +83,15 @@
   margin-left:300px;
   padding:5px 20px 5px 20px;
   // width:100%;
-  height:20px;
-  background:#cdcdcd;
+  height:40px;
+  background:$sepia;
   color:#ffffff;
-  line-height:20px;
+  line-height:40px;
+  text-align:center;
   text-transform:uppercase;
-  letter-spacing:1px;
-  font-weight:900;
-  font-size:10px;
+  letter-spacing:2px;
+  font-weight:100;
+  font-size:14px;
 }
 .dashboard {
   @include box-sizing;
@@ -100,7 +101,7 @@
   overflow-x: hidden;
   overflow-y: scroll;
   margin:0;
-  padding:30px 0 0 300px;
+  padding:50px 0 0 300px;
   width: 100%;
   height:100%;
   background:#dddddd;
@@ -118,15 +119,14 @@
   position:relative;
   display:block;
   clear:both;
-  padding:0;
-  height:83px;
-  border-top:2px solid #dedede;
-  border-bottom:2px solid #dedede;
+  padding:4px;
+  height:80px;
   background:#efefef;
   &.active {
     background:#f9f9f9;
   }
   &.empty {
+    // display:none;
     background:#e6e6e6;
     .dashboard-blurb {color:#bebebe;}
   }
@@ -146,6 +146,7 @@
       position:absolute;
       z-index:9;
       top:-10px;
+      left:0;
       display:block;
       padding-left:20px;
       width:100%;
