Working on a new profile page

--- a/client/style/_helpers.scss
+++ b/client/style/_helpers.scss
@@ -8,6 +8,15 @@ $hover: #f1f1f1;
 $text: #666666;
 $sepia: #ff905a;
 
+$green: #25b399;
+$blue: #50b7e3;
+$yellow: #ffc157;
+$borange: #ff905a;
+
+$break-small: 320px;
+$break-medium: 768px;
+$break-large: 1200px;
+
 
 /* ==========================================================================
    Helpers & Mixins
